[package]
name = "grimoire"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
libafl = { git = "https://github.com/AFLplusplus/LibAFL", rev =  "dd0bcba103d076a15ee5231007f909980261cffc" }
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL", rev =  "dd0bcba103d076a15ee5231007f909980261cffc"}
libafl_targets = { git = "https://github.com/AFLplusplus/LibAFL", rev =  "dd0bcba103d076a15ee5231007f909980261cffc", default-features = false }
